# trip-op

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Readme.md  pyproject.toml
.github/: pytest.yaml
tests/: test_model.py
trip_matching/: __init__.py  data_generator.py  feature_engineering.py  main.py  model.py  visualization.py
